Fix background image path in dark mode CSS for consistency

--- a/src/css/combined.css
+++ b/src/css/combined.css
@@ -1411,7 +1411,7 @@ a {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("../../images/photos/background.jpg");
+  background-image: url("../images/photos/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1441,7 +1441,7 @@ a {
       rgba(255, 180, 150, 0.03) 0%,
       transparent 45%
     ),
-    url("../../images/photos/background.jpg");
+    url("../images/photos/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -3198,7 +3198,7 @@ body.dark-mode .hero__background-pattern {
       rgba(255, 180, 150, 0.06) 0%,
       transparent 45%
     ),
-    url("../../images/photos/background.jpg");
+    url("../images/photos/background.jpg");
 }
 
 body.dark-mode .hero__background-pattern::before {
@@ -3330,7 +3330,7 @@ body.dark-mode .hero__background-pattern {
       rgba(255, 180, 150, 0.06) 0%,
       transparent 45%
     ),
-    url("../../images/photos/background.jpg");
+    url("../images/photos/background.jpg");
 }
 
 body.dark-mode .hero__background-pattern::before {
